<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rapla</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="server">Server-URL</string>
    <string name="login">Login</string>
    <string name="eventname"></string>
    <string name="eventtype">Event type</string>
    <string name="guest">Guests allowed</string>
    <string name="allocations">Resources</string>
    <string name="appointments">Appointments</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="empty_list">No entries</string>
    <string name="appointment_not_repeating">not repeating</string>
    <string name="options">Options</string>
    <string name="option_delete">Delete</string>
    <string name="appointment_confirm_delete">Are you sure that you want to delete this appointment?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="appointment_new">New appointment</string>
    <string name="options_undo_booking">Undo booking</string>
    <string name="allocatable_confirm_undo_booking">Are you sure that you want to undo the booking for this resource?</string>
    <string name="allocatable_assign_appointments_dialog_title">Assign appointments</string>
    <string name="allocatable_assigned_to_all_appointments">all appointments</string>
    <string name="allocatable_assigned_to_x_of_y_appointmen">assigned to %1$s of %2$s appointments</string>
    <string name="allocatable_category_x_of_y_allocatables_selected">%1$s of %2$s selected</string>
    <string name="search">Search</string>
    <string name="addEvent">Add Event</string>
    <string name="settings">Settings</string>
    <string name="time">Time</string>
    <string name="every">Every</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="detele">Delete</string>
    <string name="apply">Apply</string>
    <string name="progress_dialog_loading_data">Loading data &#8230;</string>
    <string name="cancel_discard_changes">Are you sure that you want to discard all changes?</string>
    <string name="cancel_login_wait">Do you want to cancel the login procedure?</string>
    <string name="saveSuccessfully">Event was saved successfully</string>
    <string name="confirm_delete_reservation">Are you sure that you want to delete the reservation?</string>
            
    <string name="loginDataError">Error: Please check your credentials!</string>
    <string name="loginDataSaveError">Error: Unable to save login data.</string>
    <string name="remove_reservation_succeed">%1$s successfully deleted</string>
    <string name="remove_reservation_fail">couldn\'t be deleted</string>
    <string name="exception">Unexpected error</string>
    <string name="exception_rapla_context_lookup">An error occured while connecting to the Rapla server. If the error persists, please contact your administrator.</string>
    <string name="exception_rapla_data_retrieval">An unexpected error occured while querying data from the Rapla server. If the error persists, please contact your administrator.</string>
    <string name="appointment_successfully_deleted">Appointment successfully deleted!</string>
    <string name="exception_internal_error">Unexpected internal error</string>
    <string name="exception_number_format">Port must be an integer</string>
    <string name="exception_browser_integration_no_handler_found">The url that you requested couldn\'t be handled by the application. If the error persists, please contact your administrator.</string>
    <string name="exception_browser_integration_handling_error">An error occured while processing your request. If the error persist, please context your administrator.</string>
	<string name="exception_no_internet_connection">It is no active internet connection available</string>
	<string name="exception_creation_event_failed">It was not possible to create a new event</string>
        
	<string name="titlebar_title_default">RAPLA</string>
    <string name="titlebar_title">RAPLA - %1$s</string>
    <string name="titlebar_title_user_calendars">My Calendars</string>
    <string name="titlebar_title_event_details">Event Details</string>
    <string name="titlebar_title_login">Login</string>
    <string name="titlebar_title_allocatable_list">Resources</string>
    <string name="titlebar_title_appointment_list">Appointments</string>
    <string name="titlebar_title_appointment">Appointment</string>
    <string name="x_subcategories">%1$s sub-categories</string>
    <string name="no_subcategories">No sub-categories</string>
    <string name="no_selection">No selection</string>
    <string name="root_category">Root category</string>
    <string name="deleteEvent">Delete Event</string>
    <string name="forever_repeating">No end date</string>
    <string name="no_permission_to_allocate_all">You don\'t have permission to allocate the resource</string>
    <string name="no_persmission_to_allocate_for_x_of_y_appointments">You don\'t have permission to allocate the resource on %1$s of %2$s appointments</string>
</resources>
