<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/OuterLayout" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center" >

        <ImageView
            android:id="@+id/image"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:layout_marginBottom="30dip"
            android:src="@drawable/tafel" />

        <EditText
            android:id="@+id/username"
            style="@style/LoginInputField"
            android:layout_below="@id/image"
            android:hint="@string/username"
            android:inputType="textFilter"
            android:singleLine="true" />

        <EditText
            android:id="@+id/password"
            style="@style/LoginInputField"
            android:layout_below="@id/username"
            android:hint="@string/password"
            android:inputType="textFilter"
            android:password="true"
            android:singleLine="true" />

        <EditText
            android:id="@+id/server"
            style="@style/LoginInputField"
            android:layout_below="@id/password"
            android:hint="@string/server"
            android:inputType="textFilter"
            android:singleLine="true" />
    </RelativeLayout>

    <RelativeLayout style="@style/ButtonBar" >

        <Button
            android:id="@+id/login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/login" />
    </RelativeLayout>

</RelativeLayout>